tests/modules/bad/mod_badname.catala_en
> Module This_isnt_the_file_name


```catala-test-cli
$ catala typecheck
┌─[ERROR]─
│
│  Module declared as This_isnt_the_file_name, which does not match the file
│  name "tests/modules/bad/mod_badname.catala_en". Rename the module to
│  Mod_badname or the file to
│  "tests/modules/bad/This_isnt_the_file_name.catala_en".
│
├─➤ tests/modules/bad/mod_badname.catala_en:1.10-33:
│   │
│ 1 │ > Module This_isnt_the_file_name
│   │          ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
└─
#return code 123#
```
